--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>real estate app</title>
+    <title>AqarDot</title>
   </head>
   <body>
     <div id="root"></div>
