feat: enhance SEO and social sharing metadata in index.html; add favicon

--- a/index.html
+++ b/index.html
@@ -2,13 +2,58 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Primary SEO -->
+    <title>AqarDot – Buy & Rent Properties in Egypt | عقار دوت</title>
+    <meta
+      name="description"
+      content="AqarDot (عقار دوت) helps you find apartments, villas, and shops for sale and rent across Egypt. ابحث عن شقق، فلل ومحلات للبيع والإيجار في مصر بسهولة."
+    />
+    <meta
+      name="keywords"
+      content="عقار, شقق للبيع, عقار دوت, شقق للإيجار, عقارات مصر, شقق القاهرة, شقق الإسكندرية, فلل للبيع, فلل للإيجار, Aqar, AqarDot, apartments Egypt, buy apartment Cairo, rent apartment Egypt"
+    />
+    <meta name="robots" content="index,follow" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- Open Graph (for social sharing) -->
+    <meta
+      property="og:title"
+      content="AqarDot – Buy & Rent Properties in Egypt | عقار دوت"
+    />
+    <meta
+      property="og:description"
+      content="Find properties for sale and rent across Egypt with AqarDot (عقار دوت). شقق، فلل ومحلات للبيع والإيجار في مختلف محافظات مصر."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://aqardot.com" />
+    <meta
+      property="og:image"
+      content="https://aqardot.com/email-assets/aqardot-logo-blue.png"
+    />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="AqarDot – Buy & Rent Properties in Egypt | عقار دوت"
+    />
+    <meta
+      name="twitter:description"
+      content="AqarDot (عقار دوت) helps you find apartments, villas، فلل ومحلات للبيع والإيجار في مصر."
+    />
+    <meta
+      name="twitter:image"
+      content="https://aqardot.com/email-assets/aqardot-logo-blue.png"
+    />
+
+    <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AqarDot</title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
