--- a/index.html
+++ b/index.html
@@ -70,6 +70,27 @@
         "inLanguage": ["ar", "en"]
       }
     </script>
+    <!-- Global site tag (required) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-17761181624"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "AW-17761181624");
+    </script>
+    <!-- Event snippet for Page view conversion page -->
+    <script>
+      gtag("event", "conversion", {
+        send_to: "AW-17761181624/bwtyCKn4o8cbELi_mJVC",
+        value: 1.0,
+        currency: "EUR",
+      });
+    </script>
   </head>
 
   <body>
