feat: add meta tags for Googlebot and robots to improve SEO

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
         currency: "EUR",
       });
     </script>
+    <meta name="googlebot" content="index, follow" />
+    <meta name="robots" content="index, follow" />
   </head>
 
   <body>
