feat: update canonical and Open Graph URLs to include 'www' for consistency

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     />
     <meta name="robots" content="index,follow" />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="canonical" href="https://aqardot.com/" />
+    <link rel="canonical" href="https://www.aqardot.com/" />
 
     <!-- Open Graph (for social sharing) -->
     <meta
@@ -43,8 +43,8 @@
       content="Find properties for sale and rent across Egypt with AqarDot (عقار دوت). شقق، فلل ومحلات للبيع والإيجار في مختلف محافظات مصر."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://aqardot.com" />
-    <meta property="og:image" content="https://aqardot.com/logoBlue.png" />
+    <meta property="og:url" content="https://www.aqardot.com" />
+    <meta property="og:image" content="https://www.aqardot.com/logoBlue.png" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:locale:alternate" content="ar_EG" />
 
@@ -58,7 +58,7 @@
       name="twitter:description"
       content="AqarDot (عقار دوت) helps you find apartments, villas، فلل ومحلات للبيع والإيجار في مصر."
     />
-    <meta name="twitter:image" content="https://aqardot.com/logoBlue.png" />
+    <meta name="twitter:image" content="https://www.aqardot.com/logoBlue.png" />
 
     <!-- Fonts -->
     <link
@@ -72,9 +72,9 @@
         "@type": "Organization",
         "name": "AqarDot",
         "alternateName": "عقار دوت",
-        "url": "https://aqardot.com",
-        "image": "https://aqardot.com/logoBlue.png",
-        "logo": "https://aqardot.com/logoBlue.png",
+        "url": "https://www.aqardot.com",
+        "image": "https://www.aqardot.com/logoBlue.png",
+        "logo": "https://www.aqardot.com/logoBlue.png",
         "description": "AqarDot helps you find apartments, villas, and shops for sale and rent across Egypt.",
         "areaServed": ["Egypt"],
         "inLanguage": ["ar", "en"]
